--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,3 +18,10 @@ a.active hr {
     font-weight: 400;
     font-style: normal;
 }
+
+@media (max-width:648px) {
+    a.active {
+        background-color: black;
+        color: white;
+    }
+}
