--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -8,7 +8,13 @@
     font-family: 'Outfit', sans-serif;
 }
 
+select,input,textarea {
+border: 1px solid #c2c2c2;
+outline-color: #c586A5;
+border-radius: 4px;
+}
 .active {
     background-color: #ffebf5;
     border-color: #C586A5;
 }
+
